# KennyEchidna

./: README.md  frames.gv  kenny.gv  kennyout.urdf  measurements.txt
src/kenny_2dnav/: CMakeLists.txt  package.xml
src/kenny_2dnav/launch/: kenny_configuration.launch
src/kenny_bringup/: CMakeLists.txt  package.xml
src/kenny_bringup/config/: kenny_controllers.yaml
src/kenny_bringup/launch/: kenny.launch.py
src/kenny_control/: CMakeLists.txt  package.xml  readme.md
src/kenny_control/config/: control.yaml  controllers.yaml  hardware.yaml  joint_limits.yaml  kenny_control.yaml
src/kenny_control/include/: kenny_hardware.h  kenny_hardware_interface.h
src/kenny_control/launch/: control.launch  controller_spawner.launch  controller_spawner.launch.py  kenny_control.launch  keyboard_teleop.launch  keyboard_turtle_teleop.launch  setup.launch
src/kenny_control/src/: diff_wheeled_turtlebot_key.py  kenny_hardware_interface.cpp  kenny_hardware_interface_node.cpp
src/kenny_description/: CMakeLists.txt  kennyout.urdf  package.xml  readme.md
src/kenny_description/config/: armjoints.yaml  kenny-controller-config.yaml
src/kenny_description/gazebo/: kenny.gazebo.xacro
src/kenny_description/launch/: display.launch  display.launch.py  gazebo.launch  joint-control.launch  kenny_world.launch  kenny_world.launch.xml  rviz.launch  rviz.launch.xml
src/kenny_description/ros2_control/: kenny.ros2_control.xacro  kenny_system.ros2_control.xacro
src/kenny_description/rviz/: urdf.rviz
src/kenny_description/urdf/: kenny.urdf  kenny.urdf.xacro  kenny_description.urdf  kenny_system.urdf.xacro  materials.urdf.xacro
src/kenny_description/urdf/arm/: arm.gazebo.urdf  arm.transmission.xacro  arm.urdf.xacro
src/kenny_description/urdf/base/: base.gazebo.urdf  base.transmissions.xacro  base.urdf.xacro
src/kenny_description/urdf/camera_mechanism/: camera_mechanism.gazebo.urdf  camera_mechanism.transmission.urdf  camera_mechanism.urdf.xacro  cameramech.urdf.xacro
src/kenny_hardware/: CMakeLists.txt  package.xml
src/kenny_hardware/include/kenny_hardware/: kenny_system.hpp  visibility_control.h
src/kenny_hardware/src/: kenny_system.cpp
src/kenny_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kenny_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kenny.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/kenny_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kenny_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/kennycpp/: CMakeLists.txt  package.xml
src/kennycpp/include/kennycpp/: i2c.h  joint.h  kenny.h  segment.h
src/kennycpp/src/: i2c.cpp  joint.cpp  kenny.cpp
